# mangovillage

./: Cargo.toml  README.md  rustfmt.toml
assets/ldtk/: test.ldtk
assets/models/owl/: license.txt  scene.gltf
assets/models/small/: big.glb  license.txt  scene.gltf
assets/models/volcano_island_lowpoly/: license.txt  lowpolyisland.glb  scene.gltf
client/: Cargo.toml
client/src/: main.rs
client/src/camera/: mod.rs  resource.rs
client/src/component/: mod.rs
client/src/debug/: camera.rs  component.rs  mod.rs  resource.rs
client/src/lighting/: mod.rs
client/src/networking/: mod.rs
client/src/physics/: mod.rs
client/src/player/: component.rs  mod.rs  resource.rs
client/src/state/: mod.rs
client/src/world/: mod.rs
common/: Cargo.toml
common/src/: lib.rs  util.rs
common/src/component/: mod.rs
common/src/networking/: client_packets.rs  server_packets.rs
common/src/physics/: component.rs  mod.rs
common/src/player/: component.rs  mod.rs
common/src/resource/: mod.rs
common/src/world/: mod.rs
mvp/: Cargo.toml
mvp/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
server/src/networking/: mod.rs  resource.rs
server/src/physics/: mod.rs
server/src/player/: component.rs  mod.rs
server/src/state/: mod.rs
server/src/world/: mod.rs
src/: main.rs
src/camera/: mod.rs
src/client/: client.rs  resources.rs
src/common/: components.rs  mod.rs  util.rs
src/debug/: client.rs  components.rs  mod.rs  resources.rs  server.rs
src/map/: client.rs
src/networking/: client_packets.rs  mod.rs  server_packets.rs
src/player/: client.rs  components.rs  mod.rs  server.rs
src/server/: mod.rs  resources.rs  server.rs
src/state/: client.rs  server.rs
src/world/: client.rs  components.rs  mod.rs  resources.rs  server.rs  util.rs
