[package]
name = "mangovillage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_embedded_assets = "0.6"
durian = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
# To close the console window on client
# https://stackoverflow.com/questions/29763647/how-to-make-a-program-that-does-not-display-the-console-window
winapi = { version = "0.3", features = ["wincon", "winuser"] }

# TODO: Enabling this slows down the program, making it become unresponsive within a few seconds.  Why?
# Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = 1
