[package]
name = "mangovillage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_ecs_ldtk = "0.5.0"
# Bug in bevy_ecs_tilemap where background is blended with white tiles: https://github.com/Trouv/bevy_ecs_ldtk/issues/65
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", rev = "3171dcb02bf3ef0183727d507005cfd354e708c6" }
bevy_embedded_assets = "0.6"
bevy_render = "0.9.1"
durian = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
# To close the console window on client
# https://stackoverflow.com/questions/29763647/how-to-make-a-program-that-does-not-display-the-console-window
winapi = { version = "0.3", features = ["wincon", "winuser"] }

# TODO: Enabling this slows down the program, making it become unresponsive within a few seconds.  Why?
# Seems to be related to the bevy LogPlugin in main.rs.  If I change the filter for crate durian to "durian=debug",
# it works fine.  If I change filter to "durian=info", and have below enabled, it freezes.
# Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = 1
