[package]
name = "mangovillage_client"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mangovillage_common.workspace = true
bevy.workspace = true
bevy_embedded_assets.workspace = true
durian.workspace = true
derivative.workspace = true
bevy_rapier3d = { workspace = true, features = [ "debug-render-3d" ] }
