[package]
name = "mvp"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mangovillage_common.workspace = true
bevy.workspace = true
bevy_embedded_assets.workspace = true
durian.workspace = true
derivative.workspace = true

# TODO: Remove
#bevy_rapier3d.workspace = true
bevy_xpbd_3d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "main", features = ["debug-plugin"] }